# stumpy

./: .coveragerc  .gitignore  CHANGELOG.md  README.rst  conftest.py  docstring.py  environment.yml  min_versions.py  pypi.sh  pyproject.toml  ray_python_version.py  requirements.txt  test.sh  versions.py
.github/workflows/: enforce-pr-template.yml  github-actions.yml
docs/: Tutorial_AB_Joins.ipynb  Tutorial_Annotation_Vectors.ipynb  Tutorial_Consensus_Motif.ipynb  Tutorial_Fast_Approximate_Matrix_Profiles.ipynb  Tutorial_Multidimensional_Motif_Discovery.ipynb  Tutorial_Pattern_Matching.ipynb  Tutorial_STUMPY_Basics.ipynb  Tutorial_Shapelet_Discovery.ipynb  api.rst  background.rst  conf.py  help.rst  index.rst  install.rst  pull_request_template.md
docs/WIP/: Tutorial_Advanced_Annotation_Vectors.ipynb  Tutorial_DiscordMERLIN.ipynb  Tutorial_MPdist.ipynb  Tutorial_Pan_Matrix_Profile.ipynb  Tutorial_Time_Series_Snippets.ipynb  Tutorial_Top-K_Multidimensional_Motif_and_Matches_Discovery.ipynb  Tutorial_Uniform_Scaling.ipynb
stumpy/: __init__.py  aamp.py  aamp_motifs.py  aamp_stimp.py  aamped.py  aampi.py  core.py  floss.py  gpu_aamp.py  gpu_aamp_ostinato.py  gpu_aamp_stimp.py  gpu_aampdist.py  gpu_stimp.py  gpu_stump.py  mparray.py  rng.py  scraamp.py  scrump.py  sdp.py  stimp.py  stomp.py  stump.py  stumped.py  stumpi.py
tests/: naive.py  test_aamp.py  test_aamp_mmotifs.py  test_aamp_motifs.py  test_aamp_ostinato.py  test_aamp_stimp.py  test_aampdist.py  test_aampdist_snippets.py  test_aamped.py  test_aampi.py  test_cache.py  test_chains.py  test_core.py  test_fastmath.py  test_floss.py  test_gpu_aamp.py  test_gpu_aamp_ostinato.py  test_gpu_aamp_stimp.py  test_gpu_aampdist.py  test_gpu_mpdist.py  test_gpu_ostinato.py  test_gpu_stimp.py  test_gpu_stump.py  test_maamp.py  test_maamped.py  test_mmotifs.py  test_mmparray.py  test_motifs.py  test_mparray.py  test_mpdist.py  test_mstump.py  test_mstumped.py  test_non_normalized_decorator.py  test_ostinato.py  test_precision.py  test_ray.py  test_rng.py  test_scraamp.py  test_scrump.py  test_sdp.py  (+7 more)
